Fix contrast errors

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -429,10 +429,12 @@ input[name='q']::placeholder {
     padding: .25rem .5rem !important;
 }
 
-.color-dg {
-    color:#800707!important;
+.color-btn, .color-btn a {
+    color:#800707;
 }
 
-.color-inf {
-    color:#134847!important;
+.color-btn #color-btn,
+.color-btn #color-btn-pr,
+.color-btn #color-btn-det {
+    color:#134847;
 }
